# daw

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.py  calc.py  chop.py  pattern.py  pyproject.toml  setup.py
daw/: __init__.py  audio.py  calc.py  chop.py  effects.py  main.py  pattern.py  sampler.py  scales.py  scales.yaml
daw/ui/: main.py
projects/: sampler_test.py  sampler_test_2.py  sci-chop.py  sci-liar.py
projects/Sci-Liar/: sci_liar.py
projects/sampler/: sampler.py  sampler_test.py
