[tool.poetry]
name = "daw"
version = "0.1.0"
description = ""
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
